<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingPrefix"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/android_support"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/android_support_link"
                    android:textColorLink="@android:color/holo_blue_dark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/android_license"
                        android:padding="5dp"
                        android:fontFamily="monospace"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@android:color/black"/>
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/retrofit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/retrofit_link"
                    android:textColorLink="@android:color/holo_blue_dark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/retrofit_license"
                        android:padding="5dp"
                        android:fontFamily="monospace"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@android:color/black"/>
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>